# offline-ai-companion

./: .gitignore  DEVELOPMENT_SETUP.md  LICENSE  MLC_IMPLEMENTATION_SUMMARY.md  README.md  build_and_test.sh  build_android_native.sh  pubspec.yaml  requirements.txt  setup_llama_cpp.sh  setup_mlc_libs.sh
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  mlc_tvm_wrapper.cpp
android/app/src/main/cpp/libs/: README.md
android/app/src/main/cpp_backup_llamacpp/: CMakeLists.txt  android_compat.cpp  android_compat.h  llama-mmap-android.cpp  llama_cpp_wrapper.cpp
android/app/src/main/java/com/example/offline_ai_companion/: MLCWrapper.java  MainActivity.java
assets/: mlc-app-config.json
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/models/: ai_model.dart  chat_message.dart  mlc_model.dart
lib/providers/: ai_model_provider.dart  chat_provider.dart  mlc_model_provider.dart
lib/screens/: models_screen.dart  settings_screen.dart
lib/services/: ai_service.dart  android_llama_plugin.dart  android_mlc_plugin.dart  mlc_ai_service.dart  mlc_service.dart  model_service.dart  real_llama_service.dart
lib/widgets/: message_bubble.dart  model_card.dart  model_loading_progress.dart  model_status_indicator.dart  session_drawer.dart  twinkling_bot.dart
lib_backup_llamacpp/: main.dart
lib_backup_llamacpp/models/: ai_model.dart  chat_session.dart
lib_backup_llamacpp/providers/: ai_model_provider.dart  settings_provider.dart
lib_backup_llamacpp/screens/: chat_screen.dart  home_screen.dart  models_screen.dart
lib_backup_llamacpp/services/: android_llama_plugin.dart  chat_service.dart  llama_cpp_service.dart  mobile_ai_service.dart  model_service.dart  simple_ai_service.dart
lib_backup_llamacpp/utils/: theme.dart
lib_backup_llamacpp/widgets/: chat_input.dart  model_status_indicator.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
